--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,14 +2,17 @@ name: .NET
 
 on:
   push:
-    branches: [ main ]
+    branches: [ dev ]
   pull_request:
     branches: [ main ]
 
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: {{matrix.os}}
+    strategy:
+      matrix: 
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v2
